PS-1034: Fix() - archive icon alignment

--- a/src/fontawesome-enrichment/_icons.scss
+++ b/src/fontawesome-enrichment/_icons.scss
@@ -1,4 +1,5 @@
 .fa.fa-archive-o {
     font-size: 20px;
+    vertical-align: middle;
     width: 20px;
 }
